Fix z-index on promo bar, to be bigger than secondary header

--- a/src/scss/components/_promo-bar.scss
+++ b/src/scss/components/_promo-bar.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1100;
+    z-index: 1200;
 
     width: 100%;
     
