--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1003,7 +1003,7 @@ table {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1100;
+  z-index: 1200;
   width: 100%; }
   @media not screen and (min-width: 1024px) {
     .promo-bar[class][class] {
